Enhance map marker handling in index.html for improved user experience
This commit updates the map initialization logic in the HTML template to ensure that the marker is only added after the tile layer has loaded or the map has moved. This change prevents potential issues with marker placement and improves the overall responsiveness of the map display. Additionally, the map size is invalidated to ensure proper rendering after these events.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1713,15 +1713,32 @@
                     if (!map) {
                         map = L.map(mapContainer).setView([lat, lon], 10);
 
-                        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                        const tileLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                             attribution:
                                 '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
                         }).addTo(map);
 
-                        marker = L.marker([lat, lon])
-                            .addTo(map)
-                            .bindPopup(`IP: ${ipAddress}<br>Lat: ${lat}<br>Lon: ${lon}`)
-                            .openPopup();
+                        tileLayer.once('load', function() {
+                            if (!marker) {
+                                marker = L.marker([lat, lon])
+                                    .addTo(map)
+                                    .bindPopup(`IP: ${ipAddress}<br>Lat: ${lat}<br>Lon: ${lon}`)
+                                    .openPopup();
+                                    
+                                map.invalidateSize();
+                            }
+                        });
+                        
+                        map.once('moveend', function() {
+                            if (!marker) {
+                                marker = L.marker([lat, lon])
+                                    .addTo(map)
+                                    .bindPopup(`IP: ${ipAddress}<br>Lat: ${lat}<br>Lon: ${lon}`)
+                                    .openPopup();
+                                    
+                                map.invalidateSize();
+                            }
+                        });
                     } else {
                         map.setView([lat, lon], 10);
 
@@ -1736,6 +1753,8 @@
                                 .bindPopup(`IP: ${ipAddress}<br>Lat: ${lat}<br>Lon: ${lon}`)
                                 .openPopup();
                         }
+                        
+                        map.invalidateSize();
                     }
                 }
 
