--- a/templates/index.html
+++ b/templates/index.html
@@ -1278,6 +1278,27 @@
                     elements.theme.dark.disabled = !prefersDarkMode;
 
                     if (window.hljs) hljs.highlightAll();
+
+                    if (map && typeof L !== 'undefined') {
+                        map.eachLayer(layer => {
+                            if (layer instanceof L.TileLayer) {
+                                map.removeLayer(layer);
+                            }
+                        });
+
+                        const tileUrl = prefersDarkMode
+                            ? 'https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png'
+                            : 'https://tile.openstreetmap.org/{z}/{x}/{y}.png';
+
+                        L.tileLayer(tileUrl, {
+                            attribution:
+                                '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' +
+                                (prefersDarkMode
+                                    ? ', &copy; <a href="https://carto.com/attributions">CARTO</a>'
+                                    : ''),
+                            maxZoom: 19,
+                        }).addTo(map);
+                    }
                 }
 
                 updateCodeTheme();
@@ -1713,29 +1734,40 @@
                     if (!map) {
                         map = L.map(mapContainer).setView([lat, lon], 10);
 
-                        const tileLayer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                        const prefersDarkMode = window.matchMedia(
+                            '(prefers-color-scheme: dark)'
+                        ).matches;
+                        const tileUrl = prefersDarkMode
+                            ? 'https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png'
+                            : 'https://tile.openstreetmap.org/{z}/{x}/{y}.png';
+
+                        const tileLayer = L.tileLayer(tileUrl, {
                             attribution:
-                                '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+                                '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' +
+                                (prefersDarkMode
+                                    ? ', &copy; <a href="https://carto.com/attributions">CARTO</a>'
+                                    : ''),
+                            maxZoom: 19,
                         }).addTo(map);
 
-                        tileLayer.once('load', function() {
+                        tileLayer.once('load', function () {
                             if (!marker) {
                                 marker = L.marker([lat, lon])
                                     .addTo(map)
                                     .bindPopup(`IP: ${ipAddress}<br>Lat: ${lat}<br>Lon: ${lon}`)
                                     .openPopup();
-                                    
+
                                 map.invalidateSize();
                             }
                         });
-                        
-                        map.once('moveend', function() {
+
+                        map.once('moveend', function () {
                             if (!marker) {
                                 marker = L.marker([lat, lon])
                                     .addTo(map)
                                     .bindPopup(`IP: ${ipAddress}<br>Lat: ${lat}<br>Lon: ${lon}`)
                                     .openPopup();
-                                    
+
                                 map.invalidateSize();
                             }
                         });
@@ -1753,7 +1785,7 @@
                                 .bindPopup(`IP: ${ipAddress}<br>Lat: ${lat}<br>Lon: ${lon}`)
                                 .openPopup();
                         }
-                        
+
                         map.invalidateSize();
                     }
                 }
