Update index.html to change default IP address and improve postal code and timezone formatting
This commit modifies the default placeholder and value for the endpoint input field from "8.8.8.8" to "1.1.1.1". Additionally, it updates the postal code to be a string and changes the timezone from "America/Adak" to "America/Los_Angeles", enhancing data consistency and clarity in the HTML template.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1284,9 +1284,9 @@
                                 <span class="base-url">{{ request.base_url }}json/</span>
                                 <input
                                     id="endpoint-input"
-                                    placeholder="8.8.8.8"
+                                    placeholder="1.1.1.1"
                                     type="text"
-                                    value="8.8.8.8"
+                                    value="1.1.1.1"
                                 />
                                 <button id="try-endpoint">Try it</button>
                             </div>
@@ -1306,12 +1306,12 @@
     "region": "California",
     "region_code": "CA",
     "city": "Los Angeles",
-    "postal_code": 90001,
+    "postal_code": "90001",
     "latitude": 34.052571,
     "longitude": -118.243907,
-    "timezone": "America/Adak",
+    "timezone": "America/Los_Angeles",
     "currency": "USD",
-    "accuracy_radius": 1000,
+    "accuracy_radius": 100,
     "asn": 13335,
     "organization": "Cloudflare, Inc."
 }</code></pre>
