--- a/templates/index.html
+++ b/templates/index.html
@@ -1712,7 +1712,7 @@
                         L.tileLayer(tileUrl, {
                             attribution:
                                 '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' +
-                                ', &copy; <a href="https://carto.com/attributions">CARTO</a>',
+                                ' | &copy; <a href="https://carto.com/attributions">CARTO</a>',
                             maxZoom: 19,
                         }).addTo(map);
 
@@ -2221,7 +2221,7 @@
                         const tileLayer = L.tileLayer(tileUrl, {
                             attribution:
                                 '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' +
-                                ', &copy; <a href="https://carto.com/attributions">CARTO</a>',
+                                ' | &copy; <a href="https://carto.com/attributions">CARTO</a>',
                             maxZoom: 19,
                         }).addTo(map);
 
